# ERA5_downloader

./: .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  ERA5_AutoRecovery.py  ERA5download_GUI.py  ERA5download_GUI_v2.py  ERA5download_GUI_v2_auto_restart.py  ERA5download_GUI_v2_fixed.py  ERA5download_GUI_v3.py  GIT提交计划.md  LICENSE  PR_DESCRIPTION.md  PULL_REQUEST.md  README.md  README_总览.md  UV使用指南.md  build.bat  create_pr.py  diagnostic_tool.py  era5_downloader.spec  era5_performance_monitor.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  v2.1完全自动重启功能完成.md  v2.1完全自动重启更新说明.md  v2.1时间计算Bug修复说明.md  v2.1自动重启卡死Bug修复说明.md  v2.1自动重启卡死最终修复.md  v3.0完成总结.md  v3.0新功能说明.md  修复说明报告.md  删除Release.py  启动v2自动重启版.bat  启动下载和监控.bat  启动性能监控.bat  启动智能恢复版.bat  启动程序.bat  (+18 more)
.claude/: index.json
archive/dev_scripts/: create_pr_interactive.py
archive/old_docs/: README.md  review_optimized.md  v2自动重启版使用说明.md  创建PR指南.md  发布总结.md  性能监控使用指南.md  性能问题分析报告.md  断点续传监控修复说明.md  智能恢复功能Bug修复说明.md  版本对比指南.md  环境配置总结.md  网络接口监控说明.md  诊断工具使用说明.md  速度显示0诊断指南.md  项目状态.md  项目管理脚本.bat  验证步骤指南.md
archive/old_versions/: era5_advanced_features.py
docs/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  GIT_COMMIT_SUCCESS.md  GIT_STASH_GUIDE.md  REFACTORING_SUMMARY.md  api.md  changelog.md  performance.md  user_guide.md
docs/dev/: Bug修复总结.md  性能问题分析与改进方案.md  打包和分发指南.md  打包方案对比.md  打包测试报告.md  断点续传功能说明.md
docs/reports/: 下载不完整问题分析报告.md  文件打包清单.md
era5/: gui.py
scripts/: log_analyzer.py
src/: __init__.py
tests/: __init__.py  lock_contention_demo.py  lock_contention_real.py
(+12 files in other folders)
